--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
 attrs==20.2.0
-backcall==0.2.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2020.6.20
-et-xmlfile==1.0.1
-ffmpy==0.2.3
-Flask==1.1.2
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+googleapis-common-protos==1.52.0
+grpcio==1.33.2
+gspread==3.6.0
+httplib2==0.18.1
+idna==2.10
+imageio==2.9.0
+imageio-ffmpeg==0.4.2
+json5==0.9.5
+jsonschema==3.2.0
 lxml==4.5.2
 MarkupSafe==1.1.1
+oauth2client==4.1.3
+oauthlib==3.1.0
+Pillow==8.0.1
 Pygments==2.7.1
+pyinstaller==4.0
+pyinstaller-hooks-contrib==2020.9
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
 pyTelegramBotAPI==3.7.3
-python-telegram-bot==12.8
+pytest==6.1.2
+python-dateutil==2.8.1
+pyzmq==22.0.3
+regex==2020.11.13
 requests==2.24.0
+requests-html==0.10.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+requests-unixsocket==0.2.0
 soupsieve==2.0.1
-telepot==12.7
-urllib3==1.25.10
-validators==0.18.1
+
