--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,36 @@
-attrs==20.2.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-googleapis-common-protos==1.52.0
-grpcio==1.33.2
-gspread==3.6.0
-httplib2==0.18.1
-idna==2.10
-imageio==2.9.0
-imageio-ffmpeg==0.4.2
-json5==0.9.5
-jsonschema==3.2.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-oauth2client==4.1.3
-oauthlib==3.1.0
 Pillow==8.0.1
-Pygments==2.7.1
-pyinstaller==4.0
-pyinstaller-hooks-contrib==2020.9
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
 pyTelegramBotAPI==3.7.3
-pytest==6.1.2
-python-dateutil==2.8.1
-pyzmq==22.0.3
-regex==2020.11.13
+APScheduler==3.6.3
+beautifulsoup4==4.9.3
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+clarifai==2.6.2
+configparser==5.0.1
+cryptography==3.1.1
+decorator==4.4.2
+EasyProcess==0.3
+emoji==0.6.0
+future==0.18.2
+googleapis-common-protos==1.52.0
+grpcio==1.33.1
+idna==2.10
+instapy==0.6.11
+jsonschema==2.6.0
+MeaningCloud-python==2.0.0
+plyer==1.4.3
+protobuf==3.13.0
+pycparser==2.20
+python-telegram-bot==13.0
+pytz==2020.1
+PyYAML==5.3.1
+regex==2020.10.23
 requests==2.24.0
-requests-html==0.10.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-requests-unixsocket==0.2.0
-soupsieve==2.0.1
 selenium==3.141.0
 six==1.15.0
-
+soupsieve==2.0.1
+tornado==6.0.4
+tqdm==4.50.2
+tzlocal==2.1
+urllib3==1.25.11
+webdriverdownloader==1.1.0.3
