--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,7 @@
 Pillow==8.0.1
 pyTelegramBotAPI==3.7.3
-APScheduler==3.6.3
 beautifulsoup4==4.9.3
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-clarifai==2.6.2
-configparser==5.0.1
-cryptography==3.1.1
-decorator==4.4.2
-EasyProcess==0.3
-emoji==0.6.0
-future==0.18.2
-googleapis-common-protos==1.52.0
-grpcio==1.33.1
-idna==2.10
-jsonschema==2.6.0
-MeaningCloud-python==2.0.0
-plyer==1.4.3
-protobuf==3.13.0
-pycparser==2.20
-pytz==2020.1
-PyYAML==5.3.1
 regex==2020.10.23
 requests==2.24.0
 selenium==3.141.0
-six==1.15.0
-soupsieve==2.0.1
-tornado==6.0.4
-tqdm==4.50.2
-tzlocal==2.1
-urllib3==1.25.11
+pyshorteners==1.0.1
